# SuspiciousLinkRadar

./: .dockerignore  .gitignore  AIprompt.MD  Dockerfile  LICENSE  README.md  SLR.ipynb  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: main.py  main.py.bak
app/static/: index.html  index.html.bak  index.html.logo_bak  script.js  styles.css
models/: feature_config_v1.0.json  label_map_v1.0.json  metrics_v1.0.json
scripts/: ingest_and_clean.py
slr/features/: config.py  extractor.py
slr/models/: infer.py  train.py
slr/utils/: url.py
tests/: conftest.py  test_api.py  test_features.py  test_training_smoke.py
