[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slr"
version = "1.0.0"
description = "Suspicious Link Radar - Zararlı Link Tespit Sistemi"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tldextract",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "orjson",
    "requests",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["slr*"]